--- a/assets/img/index1.html
+++ b/assets/img/index1.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
@@ -10,39 +10,35 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>figma to html</title>
+    <link rel="stylesheet" href="../css/style1.css" />
+    <title>Document</title>
   </head>
-  <body style="height: 1000px">
-    <!-- header -->
+  <body style="height: 1000px" ;>
     <header class="header fixed">
-      <!-- thanh main header -->
-      <div class="main-content">
+      <div class="main content">
         <div class="body">
-          <!-- logo -->
-          <img src="./Logo.svg" alt="Lesson." />
+          <img src="../img/Logo.svg" alt="Lesson" />
           <nav class="nav">
             <ul>
               <li class="active">
-                <a href="#!">Home</a>
+                <a href="">Home</a>
               </li>
               <li>
-                <a href="#!">Courses</a>
+                <a href="">Courses</a>
               </li>
               <li>
-                <a href="#!">Pricing</a>
+                <a href="">Pricing</a>
               </li>
               <li>
-                <a href="#!">Reviews</a>
+                <a href="">Reviews</a>
               </li>
             </ul>
           </nav>
-          <!-- btn action -->
           <div class="action">
-            <a href="#!" class="btn btn-sign-up">sign up</a>
+            <a href="" class="btn btn-sign-up">Sign Up</a>
           </div>
         </div>
       </div>
     </header>
   </body>
-</html> -->
+</html>
