--- a/assets/img/index1.html
+++ b/assets/img/index1.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="../css/style1.css" />
     <title>Document</title>
   </head>
-  <body style="height: 1000px" ;>
+  <body style="height: 1000vh" ;>
     <header class="header fixed">
-      <div class="main content">
+      <div class="main-content">
         <div class="body">
           <img src="../img/Logo.svg" alt="Lesson" />
           <nav class="nav">
@@ -40,5 +40,219 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="hero">
+        <div class="main-content">
+          <div class="body">
+            <!-- ===hero left=== -->
+            <div class="media-block">
+              <img src="../img/sky.jpg" alt="UI" class="img" />
+
+              <div class="hero-summary">
+                <!-- item1 -->
+                <div class="item">
+                  <div class="icon">
+                    <img src="../icon/Orion_page.svg" alt="UI" />
+                  </div>
+
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="tittle">UI/UX Design</p>
+                  </div>
+                </div>
+                <!-- item2 -->
+                <div class="item">
+                  <div class="icon icon2">
+                    <img src="../icon/Orion_code-window.svg" alt="dev" />
+                  </div>
+
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="tittle">Development</p>
+                  </div>
+                </div>
+                <!-- item3 -->
+                <div class="item">
+                  <div class="icon icon3">
+                    <img src="../icon/Orion_megaphone.svg" alt="Phone" />
+                  </div>
+
+                  <div class="info">
+                    <p class="label">30 Courses</p>
+                    <p class="tittle">Marketing</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ===hero right=== -->
+            <div class="content-block">
+              <h1 class="heading">
+                Learn without limits and spread knowledge.
+              </h1>
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+              <div class="cta-group">
+                <a href="#!" class="btn hero-cta">See Courses</a>
+                <button class="watch-video">
+                  <div class="icon">
+                    <img src="../icon/Polygon 2.svg" alt="Video" />
+                    <span>Watch Video</span>
+                  </div>
+                </button>
+              </div>
+              <p class="desc desc-recent">Recent engagement</p>
+              <p class="desc stats">
+                <strong>50K</strong> Students <strong>70+</strong> Couses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <!-- top left -->
+            <div class="info">
+              <h2 class="heading-lv2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <!-- top right -->
+            <div class="controls">
+              <button class="controlss control-btn1">
+                <img src="../icon/Vector 21.svg" alt="" />
+              </button>
+              <button class="controlss control-btn2">
+                <img src="../icon/right.svg " alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="courses-list">
+            <!-- item -->
+            <div class="courses-item">
+              <img src="../img/Image.jpg" alt="" class="thumb" />
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp" href="#!">Basic web design</a>
+                  </h3>
+                  <div class="rating">
+                    <img src="../icon/Star 6.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="spice">$120.75</span>
+                  <button class="btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- item2 -->
+            <div class="courses-item">
+              <img src="../img/Image11.jpg" alt="" class="thumb" />
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp" href="#!">UI/UX design</a>
+                  </h3>
+                  <div class="rating">
+                    <img src="../icon/Star 6.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="spice">$120.75</span>
+                  <button class="btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- item3 -->
+            <div class="courses-item">
+              <img src="../img/Image 12.jpg" alt="" class="thumb" />
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp" href="#">Web App design</a>
+                  </h3>
+                  <div class="rating">
+                    <img src="../icon/Star 6.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="spice">$120.75</span>
+                  <button class="btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <div class="feedback-item">
+              <!-- left -->
+              <div class="info">
+                <img src="../icon/Ellipse 2649.svg" alt="" class="avarta" />
+                <p class="desc desc1">Peter Moor</p>
+                <p class="desc desc2">Student of Web Design</p>
+                <div class="dots">
+                  <span class="dot dot1"></span>
+                  <span class="dot dot2"></span>
+                  <span class="dot dot3"></span>
+                </div>
+              </div>
+              <!-- right -->
+              <div class="content">
+                <img src="../icon/pahy.svg" alt="" class="open-quotes" />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="features">
+        <div class="main-content">
+          <div class="body">
+            <div class="imgages">
+              <img src="../img/Rectangle 10.jpg" alt="" class="picture picture1">
+              <img src="../img/Rectangle 11.jpg" alt="" class="picture picture2">
+            </div>
+
+            <div class="content">
+              <h2 class="head-top">Learner outcomes through our awesome platform</h2>
+              <p class="desc desc1">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+              <p class="desc desc2">Lesson Impact Report (2022)</p>
+              <a href="" class="btn btn-sign">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
