--- a/assets/index.html
+++ b/assets/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style1.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <title>Document</title>
   </head>
   <body style="height: 1000vh" ;>
@@ -240,13 +240,27 @@
         <div class="main-content">
           <div class="body">
             <div class="imgages">
-              <img src="../img/Rectangle 10.jpg" alt="" class="picture picture1">
-              <img src="../img/Rectangle 11.jpg" alt="" class="picture picture2">
+              <img
+                src="../img/Rectangle 10.jpg"
+                alt=""
+                class="picture picture1"
+              />
+              <img
+                src="../img/Rectangle 11.jpg"
+                alt=""
+                class="picture picture2"
+              />
             </div>
 
             <div class="content">
-              <h2 class="head-top">Learner outcomes through our awesome platform</h2>
-              <p class="desc desc1">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+              <h2 class="head-top">
+                Learner outcomes through our awesome platform
+              </h2>
+              <p class="desc desc1">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career.
+              </p>
               <p class="desc desc2">Lesson Impact Report (2022)</p>
               <a href="" class="btn btn-sign">Sign Up</a>
             </div>
